client-reactjs/src/index.css
/* ... */
.ant-tree-node-content-wrapper {
  width: 200px;
  margin-right: 20px !important;
}

.ant-tree-title li {
  display: inline;
  line-height: 18px
}

.noGutters .codemirror_MarkdownEditor .CodeMirror-sizer {
  margin-left: 0 !important;
}

.noGutters .codemirror_MarkdownEditor .CodeMirror-gutters,
.noGutters .codemirror_MarkdownEditor .CodeMirror-linenumber {
  display: none;
}

.ant-tree-switcher {
  position: relative;
  -ms-flex: none;
  flex: none;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  width: 5px;
  margin: 0;
  line-height: 24px;
  text-align: center;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none
}

.groups-tree-search-value {
  color: #f50;
}

.select-before {
  width: 65px;
}

.search-filter {
  width: 120px !important;
}

.search-options-icon {
  padding-left: 7px;
}

.group-name {
  display: block;
  font-size: 11px;
}

.asset-name i {
  padding-right: 5px;
  display: inline;
}

.ant-tree-list {
  padding-top: 5px;
}

.graph-loading {
  padding-left: 45%;
  padding-top: 330px;
  position: absolute;
}

.graph-btns-container {
  float: right;
  position: absolute;
  padding-top: 3px;
}

.graph-btns-container button {
  margin: 5px;
}

.dropdown-btn > .ant-dropdown-trigger  {
  border: none;
}

.dropdown-btn > .ant-dropdown-trigger > span {
  background-color: white !important;
}

.refresh-btn {
 border: none;
 vertical-align: top;
}

.refresh-btn > span {
 background-color: white !important;
}

.graph-overlay {
  width: 100%;
  height: 100%;
  position: fixed;
  left: 0px;
  top: 0px;
  background-color:#000;
  opacity: .25;
  z-index: 10;
}

.graph-icon {
  cursor: pointer;
}

.graph-div {
  position: relative;
}

/* Read only view for asset details  */
.read-only-input{
  background: white  !important;
  border: none;
  pointer-events: none;
  resize: none;
  height: auto;
  width: 100%;

}

.read-only-textarea{
width: 100%;
height: auto;
resize: none;
border: none;
pointer-events: none;
padding-top:5px;
overflow: hidden;
}

.read-only-input::placeholder{
  display: none;
  color: transparent;
}
.view-change-toggle-btn {
  border-bottom :  2px solid whitesmoke;
   padding-bottom: 6.2px;
}

.edit-toggle-btn {
  border-bottom :  2px solid whitesmoke;
   padding-bottom: 6.5px;
}

.read-only-markdown{
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  padding: 7px;
}


.ant-tree .ant-tree-node-content-wrapper .ant-tree-iconEle {
  display: inline-block;
  width: 24px;
  height: 24px;
  line-height: 18px !important;
  text-align: center;
  vertical-align: top;
}

